@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-08T16:19:02Z",
-  "count_outdated" : 1009,
-  "uniques_outdated" : 587,
-  "count" : 1016,
-  "uniques" : 592,
+  "timestamp" : "2024-01-09T08:18:44Z",
+  "count_outdated" : 1010,
+  "uniques_outdated" : 588,
+  "count" : 1017,
+  "uniques" : 593,
   "clones" : [
-    {
-      "timestamp": "2023-12-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-12-30T00:00:00Z",
       "count": 2,
@@ -40,6 +31,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-01-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
