@@ -1,12 +1,7 @@
 {
   "count": 7,
-  "uniques": 4,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-12-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-12-30T00:00:00Z",
       "count": 2,
@@ -21,6 +16,11 @@
       "timestamp": "2024-01-08T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-01-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
